--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 					<div class="col-md-9 col-sm-auto col-7 order-2 order-sm-2 order-md-2 d-flex justify-content-end">
 						<div class="contacts">
 							<div class="contacts__el">
-								<span class="contacts__number">7 (965)243-8603</span>
+								<span class="contacts__number">+7 (965)243-8603</span>
 								<!-- <span class="contacts__city">Moscow</span> -->
 							</div>
 							<div class="contacts__el">
-								<span class="contacts__number">7 (928)688-3592</span>
+								<span class="contacts__number">+7 (928)688-3592</span>
 								<!-- <span class="contacts__city">Vladikavkaz (back office)</span> -->
 							</div>
 							<div class="contacts__el">
@@ -142,7 +142,7 @@
 								Web <br> development
 							</h2>
 							<p class="services-desc">
-								Optimal web-solutions for your business - the making of simple or com-<br>plex projects from scratch and redesigning
+								Optimal web-solutions for your business - the making of simple or<br>complex projects from scratch and redesigning
 								and developing the <br>existing ones. 
 							</p>
 						</div>
@@ -157,7 +157,7 @@
 								</span>
 								-->
 								<div class="portfolio__type portfolio__type_landing">
-									<span class="portfolio__name">landingpages</span>	
+									<span class="portfolio__name">Landing pages</span>	
 									<p class="portfolio__category">
 										brandpage, shop-in-shop
 									</p>
@@ -217,7 +217,7 @@
 								<div class="portfolio__type portfolio__type_store">
 									<span class="portfolio__name">Banners</span>	
 									<p class="portfolio__category">
-										reclame
+										advertising
 									</p>
 								</div>
 							</div>	
@@ -357,7 +357,7 @@
 								<div class="portfolio__type portfolio__type_video">
 									<span class="portfolio__name">Video</span>	
 									<p class="portfolio__category">
-										present,information
+										present, information
 									</p>
 								</div>
 							</div>	
@@ -375,7 +375,7 @@
 								<div class="portfolio__type portfolio__type_photo">
 									<span class="portfolio__name">Photo</span>	
 									<p class="portfolio__category">
-										present,information
+										present, information
 									</p>
 								</div>
 							</div>	
@@ -475,11 +475,11 @@
 				<div class="col-7 col-sm-9 d-flex justify-content-end">
 					<div class="contacts">
 						<div class="contacts__el">
-							<span class="contacts__number">7 (965)243-8603</span>
+							<span class="contacts__number">+7 (965)243-8603</span>
 							<!-- <span class="contacts__city">Moscow</span> -->
 						</div>
 						<div class="contacts__el">
-							<span class="contacts__number">7 (928)688-3592</span>
+							<span class="contacts__number">+7 (928)688-3592</span>
 							<!-- <span class="contacts__city">Vladikavkaz (back office)</span> -->
 						</div>
 						<div class="contacts__el">
@@ -515,7 +515,7 @@
 						120
 					</span>-->
 					<div class="portfolio__type portfolio__type_landing">
-						<span class="portfolio__name">landingpages</span>	
+						<span class="portfolio__name">Landing pages</span>	
 						<p class="portfolio__category">
 							brandpage, shop-in-shop
 						</p>
@@ -604,7 +604,7 @@
 					<div class="portfolio__type portfolio__type_store">
 						<span class="portfolio__name">Banners</span>	
 						<p class="portfolio__category">
-							reclame
+							advertising
 						</p>
 					</div>
 					<a href="#" class="btn btn_portfolio">
@@ -931,7 +931,7 @@
 					<div class="portfolio__type portfolio__type_video">
 						<span class="portfolio__name">Video</span>	
 						<p class="portfolio__category">
-							present,information
+							present, information
 						</p>
 					</div>
 				</div>	
@@ -967,7 +967,7 @@
 					<div class="portfolio__type portfolio__type_photo">
 						<span class="portfolio__name">Photo</span>	
 						<p class="portfolio__category">
-							present,information
+							present, information
 						</p>
 					</div>
 					<a href="#" class="btn btn_portfolio">
