--- a/index.html
+++ b/index.html
@@ -936,6 +936,9 @@
 				</div>	
 			</div>
 			<div class="popup__imgs">
+				<a class="popup__img popup_video" data-video-id="ucaRVWpRmsw">
+					<img src="img/photo/1.jpg">
+				</a>
 			</div>
 		</div>
 	</div>
@@ -1072,6 +1075,8 @@
 	<script src="js/jquery/jquery.min.js"></script>
 	<script src="js/slick/slick.min.js"></script>
 	<script src="js/lightbox/lightbox.min.js"></script>
+	<script src="js/modal-video/jquery-modal-video.js"></script>
+	<script src="js/modal-video/modal-video.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
