Добавил картинки в попап видео

--- a/index.html
+++ b/index.html
@@ -937,9 +937,21 @@
 				</div>	
 			</div>
 			<div class="popup__imgs">
-				<!--<a class="popup__img popup_video" data-video-id="ucaRVWpRmsw">
-					<img src="img/photo/1.jpg">
-				</a>-->
+				<a class="popup__img popup_video"> <!-- data-video-id="ucaRVWpRmsw" -->
+					<img src="img/video/1.jpg">
+				</a>
+				<a class="popup__img popup_video">
+					<img src="img/video/2.jpg">
+				</a>
+				<a class="popup__img popup_video">
+					<img src="img/video/3.jpg">
+				</a>
+				<a class="popup__img popup_video">
+					<img src="img/video/4.jpg">
+				</a>
+				<a class="popup__img popup_video">
+					<img src="img/video/5.jpg">
+				</a>
 			</div>
 		</div>
 	</div>
