--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 					<div class="col-md-9 col-sm-auto col-7 order-2 order-sm-2 order-md-2 d-flex justify-content-end">
 						<div class="contacts">
 							<div class="contacts__el">
-								<span class="contacts__number">8 965 243-86-03</span>
+								<span class="contacts__number">7 (965)243-8603</span>
 								<!-- <span class="contacts__city">Moscow</span> -->
 							</div>
 							<div class="contacts__el">
-								<span class="contacts__number">8 928 688-35-92</span>
+								<span class="contacts__number">7 (928)688-3592</span>
 								<!-- <span class="contacts__city">Vladikavkaz (back office)</span> -->
 							</div>
 							<div class="contacts__el">
@@ -157,14 +157,14 @@
 								</span>
 								-->
 								<div class="portfolio__type portfolio__type_landing">
-									<span class="portfolio__name">landingpage</span>	
+									<span class="portfolio__name">landingpages</span>	
 									<p class="portfolio__category">
 										brandpage, shop-in-shop
 									</p>
 								</div>
 							</div>	
 							<a href="#" class="btn" id="landingBtn">
-								View works
+								View projects
 							</a>
 						</div>
 					</div>
@@ -175,14 +175,14 @@
 									210
 								</span>-->
 								<div class="portfolio__type portfolio__type_ico">
-									<span class="portfolio__name">ICO project</span>	
+									<span class="portfolio__name">ICO projects</span>	
 									<p class="portfolio__category">
 										blockchain
 									</p>
 								</div>
 							</div>	
 							<a href="#" class="btn" id="icoBtn">
-								View works
+								View projects
 							</a>
 						</div>
 					</div>
@@ -222,7 +222,7 @@
 								</div>
 							</div>	
 							<a href="#" class="btn" id="storeBtn">
-								View works
+								View projects
 							</a>
 						</div>
 					</div>
@@ -240,7 +240,7 @@
 								</div>
 							</div>	
 							<a href="#" class="btn" id="contentBtn">
-								View works
+								View projects
 							</a>
 						</div>
 					</div>
@@ -279,7 +279,7 @@
 									</p>
 								</div>
 								<a href="#" class="btn btn_portfolio" id="digitalBtn">
-									View works
+									View projects
 								</a>
 							</div>	
 						</div>
@@ -320,7 +320,7 @@
 									</p>
 								</div>
 								<a href="#" class="btn btn_portfolio" id="stickersBtn">
-									View works
+									View projects
 								</a>
 							</div>	
 						</div>
@@ -362,7 +362,7 @@
 								</div>
 							</div>	
 							<a href="#" class="btn" id="videoBtn">
-								View works
+								View projects
 							</a>
 						</div>
 					</div>
@@ -380,7 +380,7 @@
 								</div>
 							</div>	
 							<a href="#" class="btn" id="photoBtn">
-								View works
+								View projects
 							</a>
 						</div>
 					</div>
@@ -475,11 +475,11 @@
 				<div class="col-7 col-sm-9 d-flex justify-content-end">
 					<div class="contacts">
 						<div class="contacts__el">
-							<span class="contacts__number">8 965 243-86-03</span>
+							<span class="contacts__number">7 (965)243-8603</span>
 							<!-- <span class="contacts__city">Moscow</span> -->
 						</div>
 						<div class="contacts__el">
-							<span class="contacts__number">8 928 688-35-92</span>
+							<span class="contacts__number">7 (928)688-3592</span>
 							<!-- <span class="contacts__city">Vladikavkaz (back office)</span> -->
 						</div>
 						<div class="contacts__el">
@@ -515,7 +515,7 @@
 						120
 					</span>-->
 					<div class="portfolio__type portfolio__type_landing">
-						<span class="portfolio__name">landingpage</span>	
+						<span class="portfolio__name">landingpages</span>	
 						<p class="portfolio__category">
 							brandpage, shop-in-shop
 						</p>
@@ -529,7 +529,7 @@
 				<a href="img/landingpage/1.jpg" class="popup__img" data-lightbox="roadtrip1">
 					<img src="img/landingpage/1.jpg">
 				</a>
-				<a href="img/landingpage/2.png" class="popup__img" data-lightbox="roadtrip1">
+				<a href="img/landingpage/2.jpg" class="popup__img" data-lightbox="roadtrip1">
 					<img src="img/landingpage/2.jpg">
 				</a>
 				<a href="img/landingpage/3.jpg" class="popup__img" data-lightbox="roadtrip1">
@@ -569,7 +569,7 @@
 						210
 					</span>-->
 					<div class="portfolio__type portfolio__type_ico">
-						<span class="portfolio__name">ICO project</span>	
+						<span class="portfolio__name">ICO projects</span>	
 						<p class="portfolio__category">
 							blockchain
 						</p>
@@ -613,55 +613,55 @@
 				</div>	
 			</div>
 			<div class="popup__imgs">
-				<a href="img/store/1.png" class="popup__img" data-lightbox="roadtrip3">
+				<a href="img/store/1.jpg" class="popup__img" data-lightbox="roadtrip3">
 					<img src="img/store/1.jpg">
 				</a>
-				<a href="img/store/2.png" class="popup__img" data-lightbox="roadtrip3">
+				<a href="img/store/2.jpg" class="popup__img" data-lightbox="roadtrip3">
 					<img src="img/store/2.jpg">
 				</a>
-				<a href="img/store/3.png" class="popup__img" data-lightbox="roadtrip3">
+				<a href="img/store/3.jpg" class="popup__img" data-lightbox="roadtrip3">
 					<img src="img/store/3.jpg">
 				</a>
-				<a href="img/store/4.png" class="popup__img" data-lightbox="roadtrip3">
+				<a href="img/store/4.jpg" class="popup__img" data-lightbox="roadtrip3">
 					<img src="img/store/4.jpg">
 				</a>
-				<a href="img/store/5.png" class="popup__img" data-lightbox="roadtrip3">
+				<a href="img/store/5.jpg" class="popup__img" data-lightbox="roadtrip3">
 					<img src="img/store/5.jpg">
 				</a>
-				<a href="img/store/6.png" class="popup__img" data-lightbox="roadtrip3">
+				<a href="img/store/6.jpg" class="popup__img" data-lightbox="roadtrip3">
 					<img src="img/store/6.jpg">
 				</a>
-				<a href="img/store/7.png" class="popup__img" data-lightbox="roadtrip3">
+				<a href="img/store/7.jpg" class="popup__img" data-lightbox="roadtrip3">
 					<img src="img/store/7.jpg">
 				</a>
-				<a href="img/store/8.png" class="popup__img" data-lightbox="roadtrip3">
+				<a href="img/store/8.jpg" class="popup__img" data-lightbox="roadtrip3">
 					<img src="img/store/8.jpg">
 				</a>
-				<a href="img/store/9.png" class="popup__img" data-lightbox="roadtrip3">
+				<a href="img/store/9.jpg" class="popup__img" data-lightbox="roadtrip3">
 					<img src="img/store/9.jpg">
 				</a>
-				<a href="img/store/10.png" class="popup__img" data-lightbox="roadtrip3">
+				<a href="img/store/10.jpg" class="popup__img" data-lightbox="roadtrip3">
 					<img src="img/store/10.jpg">
 				</a>
-				<a href="img/store/11.png" class="popup__img" data-lightbox="roadtrip3">
+				<a href="img/store/11.jpg" class="popup__img" data-lightbox="roadtrip3">
 					<img src="img/store/11.jpg">
 				</a>
-				<a href="img/store/12.png" class="popup__img" data-lightbox="roadtrip3">
+				<a href="img/store/12.jpg" class="popup__img" data-lightbox="roadtrip3">
 					<img src="img/store/12.jpg">
 				</a>
-				<a href="img/store/13.png" class="popup__img" data-lightbox="roadtrip3">
+				<a href="img/store/13.jpg" class="popup__img" data-lightbox="roadtrip3">
 					<img src="img/store/13.jpg">
 				</a>
-				<a href="img/store/14.png" class="popup__img" data-lightbox="roadtrip3">
+				<a href="img/store/14.jpg" class="popup__img" data-lightbox="roadtrip3">
 					<img src="img/store/14.jpg">
 				</a>
-				<a href="img/store/15.png" class="popup__img" data-lightbox="roadtrip3">
+				<a href="img/store/15.jpg" class="popup__img" data-lightbox="roadtrip3">
 					<img src="img/store/15.jpg">
 				</a>
-				<a href="img/store/16.png" class="popup__img" data-lightbox="roadtrip3">
+				<a href="img/store/16.jpg" class="popup__img" data-lightbox="roadtrip3">
 					<img src="img/store/16.jpg">
 				</a>
-				<a href="img/store/17.png" class="popup__img" data-lightbox="roadtrip3">
+				<a href="img/store/17.jpg" class="popup__img" data-lightbox="roadtrip3">
 					<img src="img/store/17.jpg">
 				</a>
 			</div>
