--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<meta name="format-detection" content="telephone=no">
 	<title>Rembrand</title>
 	<link rel="stylesheet" href="css/main.css">
 </head>
@@ -19,16 +20,16 @@
 					<div class="col-md-9 col-sm-auto col-7 order-2 order-sm-2 order-md-2 d-flex justify-content-end">
 						<div class="contacts">
 							<div class="contacts__el">
-								<span class="contacts__number">+7 (965)243-8603</span>
-								<!-- <span class="contacts__city">Moscow</span> -->
+								<span class="contacts__number">+7 (965)243-8603 RU</span>
+								<!-- <span class="contacts__city"></span> -->
 							</div>
 							<div class="contacts__el">
-								<span class="contacts__number">+7 (928)688-3592</span>
-								<!-- <span class="contacts__city">Vladikavkaz (back office)</span> -->
+								<span class="contacts__number">+82 10-4609-3123 KR</span>
+								<!-- <span class="contacts__city"></span> -->
 							</div>
 							<div class="contacts__el">
 								<span class="contacts__number">ms@rembrand.me</span>
-								<!-- <span class="contacts__city">Seoul  (head office)</span> -->
+								<!-- <span class="contacts__city">Email</span> -->
 							</div>
 						</div>
 					</div>
@@ -79,52 +80,59 @@
 			</div>
 			<div class="slider-items" id="sliderWork">
 				<a href="#" class="work" style="background-image: url(img/delonghi-bg.jpg)">
-					<div class="work__category">Web development</div>
-					<h3 class="work__title"><img src="img/delonghi.png" class="work__logo">Measurable least <br>evaluable</h3>
-					<p class="work__desc">The word project comes from</p>
+					<div class="work__category">E-commerce</div>
+					<h3 class="work__title"><img src="img/delonghi.png" class="work__logo">Content<br>production</h3>
+					<p class="work__desc">Product cards, rich content</p>
 				</a>
 	
 				<a href="#" class="work" style="background-image: url(img/braun-bg.jpg)">
-					<div class="work__category">E-commerce</div>
-					<h3 class="work__title"><img src="img/braun.png" class="work__logo">Project<br>management</h3>
-					<p class="work__desc">The word project comes from</p>
+					<div class="work__category">Web development</div>
+					<h3 class="work__title"><img src="img/eldorado.png" class="work__logo">Landing page</h3>
+					<p class="work__desc">Shop-in-shop</p>
 				</a>
 	
+				<a href="#" class="work" style="background-image: url(img/ubex-bg.jpg)">
+					<div class="work__category">Web development</div>
+					<h3 class="work__title"><img src="img/ubex.png" class="work__logo">ICO project</h3>
+					<p class="work__desc">Blockchain</p>
+				</a>
+
 				<a href="#" class="work" style="background-image: url(img/delonghi-bg.jpg)">
-					<div class="work__category">Web development</div>
-					<h3 class="work__title"><img src="img/delonghi.png" class="work__logo">Measurable least <br>evaluable</h3>
-					<p class="work__desc">The word project comes from</p>
+					<div class="work__category">E-commerce</div>
+					<h3 class="work__title"><img src="img/delonghi.png" class="work__logo">Content<br>production</h3>
+					<p class="work__desc">Product cards, rich content</p>
 				</a>
 	
 				<a href="#" class="work" style="background-image: url(img/braun-bg.jpg)">
-					<div class="work__category">E-commerce</div>
-					<h3 class="work__title"><img src="img/braun.png" class="work__logo">Project<br>management</h3>
-					<p class="work__desc">The word project comes from</p>
+					<div class="work__category">Web development</div>
+					<h3 class="work__title"><img src="img/eldorado.png" class="work__logo">Landing page</h3>
+					<p class="work__desc">Shop-in-shop</p>
 				</a>
 	
+				<a href="#" class="work" style="background-image: url(img/ubex-bg.jpg)">
+					<div class="work__category">Web development</div>
+					<h3 class="work__title"><img src="img/ubex.png" class="work__logo">ICO project</h3>
+					<p class="work__desc">Blockchain</p>
+				</a>
+
 				<a href="#" class="work" style="background-image: url(img/delonghi-bg.jpg)">
-					<div class="work__category">Web development</div>
-					<h3 class="work__title"><img src="img/delonghi.png" class="work__logo">Measurable least <br>evaluable</h3>
-					<p class="work__desc">The word project comes from</p>
+					<div class="work__category">E-commerce</div>
+					<h3 class="work__title"><img src="img/delonghi.png" class="work__logo">Content<br>production</h3>
+					<p class="work__desc">Product cards, rich content</p>
 				</a>
 	
 				<a href="#" class="work" style="background-image: url(img/braun-bg.jpg)">
-					<div class="work__category">E-commerce</div>
-					<h3 class="work__title"><img src="img/braun.png" class="work__logo">Project<br>management</h3>
-					<p class="work__desc">The word project comes from</p>
-				</a>
-	
-				<a href="#" class="work" style="background-image: url(img/delonghi-bg.jpg)">
 					<div class="work__category">Web development</div>
-					<h3 class="work__title"><img src="img/delonghi.png" class="work__logo">Measurable least <br>evaluable</h3>
-					<p class="work__desc">The word project comes from</p>
+					<h3 class="work__title"><img src="img/eldorado.png" class="work__logo">Landing page</h3>
+					<p class="work__desc">Shop-in-shop</p>
 				</a>
 	
-				<a href="#" class="work" style="background-image: url(img/braun-bg.jpg)">
-					<div class="work__category">E-commerce</div>
-					<h3 class="work__title"><img src="img/braun.png" class="work__logo">Project<br>management</h3>
-					<p class="work__desc">The word project comes from</p>
+				<a href="#" class="work" style="background-image: url(img/ubex-bg.jpg)">
+					<div class="work__category">Web development</div>
+					<h3 class="work__title"><img src="img/ubex.png" class="work__logo">ICO project</h3>
+					<p class="work__desc">Blockchain</p>
 				</a>
+	
 			</div>
 		</div>
 	</section>
@@ -142,7 +150,7 @@
 								Web <br> development
 							</h2>
 							<p class="services-desc">
-								Optimal web-solutions for your business - the making of simple or<br>complex projects from scratch and redesigning
+								Optimal web-solutions for your business - the making of simple or <br>complex projects from scratch and redesigning
 								and developing the <br>existing ones. 
 							</p>
 						</div>
@@ -436,11 +444,11 @@
 						<img src="img/brands/megamart.png" class="img-fluid">
 					</a>
 					<a href="#" class="brands__item">
-						<img src="img/brands/sigma.png" class="img-fluid">
+						<img src="img/brands/globus-rus.png" class="img-fluid">
 					</a>
 					<a href="#" class="brands__item">
-						<img src="img/brands/green-apple.png" class="img-fluid">
-					</a>
+						<img src="img/brands/blockforce.png" class="img-fluid">
+					</a>					
 					<a href="#" class="brands__item">
 						<img src="img/brands/merkuri.png" class="img-fluid">
 					</a>
@@ -475,16 +483,16 @@
 				<div class="col-7 col-sm-9 d-flex justify-content-end">
 					<div class="contacts">
 						<div class="contacts__el">
-							<span class="contacts__number">+7 (965)243-8603</span>
-							<!-- <span class="contacts__city">Moscow</span> -->
+							<span class="contacts__number">+7 (965)243-8603 RU</span>
+							<!-- <span class="contacts__city"></span> -->
 						</div>
 						<div class="contacts__el">
-							<span class="contacts__number">+7 (928)688-3592</span>
-							<!-- <span class="contacts__city">Vladikavkaz (back office)</span> -->
+							<span class="contacts__number">+82 10-4609-3123 KR</span>
+							<!-- <span class="contacts__city"></span> -->
 						</div>
 						<div class="contacts__el">
 							<span class="contacts__number">ms@rembrand.me</span>
-							<!-- <span class="contacts__city">Seoul  (head office)</span> -->
+							<!-- <span class="contacts__city">Email</span> -->
 						</div>
 					</div>
 				</div>
@@ -493,7 +501,7 @@
 				<div class="row justify-content-between">
 					<div class="col-auto">
 						<p class="footer_copyrite">
-							&copy; 2014-2018   Digital Agency. All rights reserved copying material is prohibited
+							&copy; 2014-2019  Digital Agency. All rights reserved
 						</p>
 					</div>
 					<div class="col-auto">
