Поправил modal-video.min.js

--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@
 	<script src="js/slick/slick.min.js"></script>
 	<script src="js/lightbox/lightbox.min.js"></script>
 	<script src="js/modal-video/jquery-modal-video.js"></script>
-	<script src="js/modal-video/modal-video.js"></script>
+	<script src="js/modal-video/modal-video.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
