Добавил brand design

--- a/index.html
+++ b/index.html
@@ -197,6 +197,45 @@
 				</div>
 			</article>
 
+			<article class="brand">
+				<div class="services-type">
+					<div class="row">
+						<div class="col-3">
+							<img src="img/icons/brand-icon.png" class="services-icon">
+						</div>
+						<div class="col-9">
+							<h2 class="services-title">
+								Brand design 
+							</h2>
+							<p class="services-desc">
+								Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum dolores repudiandae id quisquam omnis aliquam deserunt vero,
+								 suscipit illo ea assumenda nesciunt aspernatur tempora quis adipisci sed quaerat nemo enim!
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-12">
+						<div class="portfolio">
+							<div class="portfolio__wrap portfolio__wrap_full">
+								<!--<span class="portfolio__quantity portfolio__quantity_product">
+									1280
+								</span>-->
+								<div class="portfolio__type portfolio__type_corporate">
+									<span class="portfolio__name">Corporate identity</span>	
+									<p class="portfolio__category">
+										logo, packaging
+									</p>
+								</div>
+								<a href="#" class="btn btn_portfolio" id="corporateBtn">
+									View projects
+								</a>
+							</div>	
+						</div>
+					</div>
+				</div>
+			</article>
+
 			<article class="ecommerce">
 				<div class="services-type">
 					<div class="row">
@@ -1088,6 +1127,33 @@
 				</a>
 				<a href="img/digital/19.jpg" class="popup__img" data-lightbox="roadtrip7">
 					<img src="img/digital/19.jpg">
+				</a>
+			</div>
+		</div>
+	</div>
+
+	<div class="popup" id="corporate">
+		<div class="popup-modal">
+			<button class="popup__close">&#215;</button>
+			<div class="portfolio portfolio_popup">
+				<div class="portfolio__wrap portfolio__wrap_full">
+					<!--<span class="portfolio__quantity portfolio__quantity_product">
+						1280
+					</span>-->
+					<div class="portfolio__type portfolio__type_corporate">
+						<span class="portfolio__name">Corporate identity</span>	
+						<p class="portfolio__category">
+							logo, packaging
+						</p>
+					</div>
+					<a href="#" class="btn btn_portfolio">
+						order project
+					</a>
+				</div>	
+			</div>
+			<div class="popup__imgs">
+				<a href="img/digital/1.jpg" class="popup__img" data-lightbox="roadtrip7">
+					<img src="img/digital/1.jpg">
 				</a>
 			</div>
 		</div>
