--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <h2 class="main__sentence">
                         <span>Купите кофемашину,</span> <br>
                         участвующую в акции, и получите <br>
-                        <b>Набор чашек</b> Mix Glasses Set <br>
+                        <strong>Набор чашек</strong> Mix Glasses Set <br>
                         <div class="upper">В ПОДАРОК!</div>
                     </h2>
                 </div>
@@ -145,7 +145,7 @@
             </h2>
             <div class="steps__wrap">
                 <div class="row justify-content-between">
-                    <div class="col-lg-auto col-sm-6">
+                    <div class="col-lg-auto col-6">
                         <div class="steps__item">
                             <div class="steps__icon steps__icon_1"></div>
                             <h4 class="steps__title">
@@ -154,7 +154,7 @@
                             </h4>  
                         </div>
                     </div>
-                    <div class="col-lg-auto col-sm-6">
+                    <div class="col-lg-auto col-6">
                         <div class="steps__item">
                             <div class="steps__icon steps__icon_2"></div>
                             <h4 class="steps__title">
@@ -163,7 +163,7 @@
                             </h4>  
                         </div>
                     </div>
-                    <div class="col-lg-auto col-sm-6">
+                    <div class="col-lg-auto col-6">
                         <div class="steps__item">
                             <div class="steps__icon steps__icon_3"></div>
                             <h4 class="steps__title">
@@ -172,7 +172,7 @@
                             </h4>  
                         </div>
                     </div>
-                    <div class="col-lg-auto col-sm-6">
+                    <div class="col-lg-auto col-6">
                         <div class="steps__item">
                             <div class="steps__icon steps__icon_4"></div>
                             <h4 class="steps__title">
