--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <section class="main">
         <div class="container">
             <div class="row justify-content-end">
-                <div class="col-lg-6 col-md-8">
+                <div class="col-lg-6 col-sm-8 col-12 main__wrap">
                     <h1 class="main__title">
                         Прикоснитесь к традициям
                         итальянского кофе
@@ -26,6 +26,7 @@
                         <strong>Набор чашек</strong> Mix Glasses Set <br>
                         <div class="upper">В ПОДАРОК!</div>
                     </h2>
+                    <a href="#products" class="main__btn main__btn_mob">Выбрать модель</a>
                 </div>
             </div>
         </div>
