--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
 
     <section class="parallax">
         <img src="img/mask.png" class="img-fluid">
+        <div class="parallax__wrap">
+            <div class="parallax__bg" style="background-image: url('img/parallax.jpg');">
+            </div>
+        </div>
     </section>
 
     <section class="advantages">
